# sundae-contracts

./: .gitignore  README.md  aiken.toml  build.sh  cabal.project  default-gitignore.nix  flake.nix  linker-workaround.nix  plutus-dec23.json  plutus.json
.github/workflows/: tests.yml
aiken/: aiken.toml  build.sh  plutus.json
aiken/lib/: shared.ak
aiken/lib/calculation/: deposit.ak  donation.ak  process.ak  shared.ak  strategy.ak  swap.ak  withdrawal.ak
aiken/lib/sundae/: multisig.ak
aiken/lib/types/: order.ak  pool.ak  settings.ak
aiken/validators/: order.ak  pool.ak  settings.ak  stake.ak
compiler/: Main.hs  compiler.cabal
lib/: shared.ak
lib/calculation/: InputSorting.md  deposit.ak  donation.ak  oracle.ak  process.ak  record.ak  shared.ak  stableswap.ak  strategy.ak  swap.ak  withdrawal.ak
lib/calculation/sub_conditions/: shared.ak
lib/calculation/sub_conditions/default/: process.ak  verify_datum.ak
lib/calculation/sub_conditions/trading_hours/: process.ak  verify_datum.ak
lib/tests/aiken/: deposit.ak  donation.ak  oracle.ak  record.ak  swap.ak  withdrawal.ak
lib/tests/calculation/: constant_product.ak  withdrawal.ak
lib/tests/examples/: ex_order.ak  ex_pool.ak  ex_settings.ak  ex_shared.ak
lib/types/: condition_pool.ak  oracle.ak  order.ak  pool.ak  settings.ak
lib/types/conditions/: default.ak  default_trading_hours.ak  nft_check.ak  permissioned.ak  trading_hours.ak
lucid/: cpp.ts  main.ts  plutus-mint.ts  run.sh  types.ts
onchain/: cached_poison_randoms.json  factory-boot-settings.json  onchain.cabal
onchain/Sundae/: Compiled.hs  Contracts.hs  GeneratePoisonPill.hs  PoisonPill.hs  ShallowData.hs  Utilities.hs
onchain/Sundae/Compiled/: Factory.hs  Mints.hs  Others.hs  Pool.hs
onchain/Sundae/Contracts/: Common.hs  Factory.hs  Mints.hs  Others.hs  Pool.hs
onchain/Sundae/Dummy/: DummyScript.hs
onchain/test/: Main.hs
onchain/test/Test/Contracts/: Orphans.hs  Pool.hs  SundaeScooperCompat.hs  Utils.hs
onchain/test/data/: factory-boot-settings.json
validators/: condition_pool.ak  documentation.ak  oracle.ak  order.ak  pool.ak  pool_stake.ak  settings.ak  stake.ak
validators/conditions/: default.ak  default_trading_hours.ak  nft_check.ak  permissioned.ak  trading_hours.ak
validators/tests/: constants.ak  order.ak  pool.ak  settings.ak
