cabal-version: 3.0

name:                txc
version:             0.1.0.0
synopsis:            generate stdin.json for various transaction types
license-file:        ../LICENSE
author:              sundae
maintainer:          chessai@sundaeswap.finance
build-type:          Simple

common ghc-config
  ghc-options:
    -Wall
  default-language: Haskell2010
  default-extensions: BangPatterns
                      BlockArguments
                      ConstraintKinds
                      DataKinds
                      DeriveAnyClass
                      DeriveFoldable
                      DeriveFunctor
                      DeriveGeneric
                      DeriveLift
                      DeriveTraversable
                      DerivingStrategies
                      DerivingVia
                      ExplicitForAll
                      FunctionalDependencies
                      FlexibleContexts
                      FlexibleInstances
                      GADTs
                      GeneralizedNewtypeDeriving
                      ImportQualifiedPost
                      LambdaCase
                      MonoLocalBinds
                      MultiParamTypeClasses
                      NamedFieldPuns
                      NumericUnderscores
                      OverloadedStrings
                      PatternGuards
                      QuasiQuotes
                      RankNTypes
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TemplateHaskell
                      TupleSections
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      TypeSynonymInstances
                      ViewPatterns

executable compiler
  import: ghc-config
  hs-source-dirs: .
  main-is: Main.hs
  build-depends:
    , aeson
    , base
    , onchain
    , optparse-applicative
  ghc-options:
    -rtsopts