cabal-version: 3.0

name:                compiler
version:             0.1.0.0
synopsis:            compile sundae contracts
license-file:        ../LICENSE
author:              SundaeSwap Labs
maintainer:          SundaeSwap Labs
build-type:          Simple

common ghc-config
  ghc-options:
    -Wall
  default-language: Haskell2010
  default-extensions: BangPatterns
                      BlockArguments
                      ConstraintKinds
                      DataKinds
                      DeriveAnyClass
                      DeriveFoldable
                      DeriveFunctor
                      DeriveGeneric
                      DeriveLift
                      DeriveTraversable
                      DerivingStrategies
                      DerivingVia
                      ExplicitForAll
                      FunctionalDependencies
                      FlexibleContexts
                      FlexibleInstances
                      GADTs
                      GeneralizedNewtypeDeriving
                      ImportQualifiedPost
                      LambdaCase
                      MonoLocalBinds
                      MultiParamTypeClasses
                      NamedFieldPuns
                      NumericUnderscores
                      OverloadedStrings
                      PatternGuards
                      QuasiQuotes
                      RankNTypes
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TemplateHaskell
                      TupleSections
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      TypeSynonymInstances
                      ViewPatterns

executable compiler
  import: ghc-config
  hs-source-dirs: .
  main-is: Main.hs
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , directory
    , filepath
    , onchain
    , optparse-applicative
    , plutus-ledger-api
  ghc-options:
    -rtsopts